添加签名，九宫格，文本，徽章，视频

--- a/examples/swiper.html
+++ b/examples/swiper.html
@@ -12,41 +12,41 @@
     <hc-view>
       <hc-panel>
         <hc-title>普通</hc-title>
-        <hc-swiper loop id="control">
-          <hc-swiper-item>1</hc-swiper-item>
-          <hc-swiper-item>2</hc-swiper-item>
-          <hc-swiper-item>3</hc-swiper-item>
+        <hc-swiper loop id="control" height="200">
+          <hc-swiper-item style="background:#0c84ff;color:#fff;">1</hc-swiper-item>
+          <hc-swiper-item style="background:#13ca8a;color:#fff;">2</hc-swiper-item>
+          <hc-swiper-item style="background:#f32326;color:#fff;">3</hc-swiper-item>
         </hc-swiper>
         <button id="prev">left</button>
         <button id="next">right</button>
       </hc-panel>
       <hc-panel>
         <hc-title>水平自动轮播</hc-title>
-        <hc-swiper autoplay loop>
-          <hc-swiper-item>1</hc-swiper-item>
-          <hc-swiper-item>2</hc-swiper-item>
-          <hc-swiper-item>3</hc-swiper-item>
+        <hc-swiper autoplay loop height="200">
+          <hc-swiper-item style="background:#0c84ff;color:#fff;">1</hc-swiper-item>
+          <hc-swiper-item style="background:#13ca8a;color:#fff;">2</hc-swiper-item>
+          <hc-swiper-item style="background:#f32326;color:#fff;">3</hc-swiper-item>
         </hc-swiper>
       </hc-panel>
       <hc-panel>
         <hc-title>垂直自动轮播</hc-title>
-        <hc-swiper autoplay loop vertical>
-          <hc-swiper-item>1</hc-swiper-item>
-          <hc-swiper-item>2</hc-swiper-item>
-          <hc-swiper-item>3</hc-swiper-item>
+        <hc-swiper autoplay loop vertical height="200">
+          <hc-swiper-item style="background:#0c84ff;color:#fff;">1</hc-swiper-item>
+          <hc-swiper-item style="background:#13ca8a;color:#fff;">2</hc-swiper-item>
+          <hc-swiper-item style="background:#f32326;color:#fff;">3</hc-swiper-item>
         </hc-swiper>
       </hc-panel>
       <hc-panel>
         <hc-title>无限循环</hc-title>
-        <hc-swiper loop>
-          <hc-swiper-item>1</hc-swiper-item>
-          <hc-swiper-item>2</hc-swiper-item>
-          <hc-swiper-item>3</hc-swiper-item>
+        <hc-swiper loop height="200">
+          <hc-swiper-item style="background:#0c84ff;color:#fff;">1</hc-swiper-item>
+          <hc-swiper-item style="background:#13ca8a;color:#fff;">2</hc-swiper-item>
+          <hc-swiper-item style="background:#f32326;color:#fff;">3</hc-swiper-item>
         </hc-swiper>
       </hc-panel>
       <hc-panel>
         <hc-title>垂直方向</hc-title>
-        <hc-swiper vertical>
+        <hc-swiper vertical height="200">
           <hc-swiper-item>
             <hc-image src="../assets/img1.png"></hc-image>
           </hc-swiper-item>
@@ -60,7 +60,7 @@
       </hc-panel>
       <hc-panel>
         <hc-title>垂直无限轮播</hc-title>
-        <hc-swiper vertical loop>
+        <hc-swiper vertical loop height="200">
           <hc-swiper-item>
             <hc-image src="../assets/img1.png"></hc-image>
           </hc-swiper-item>
