--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
       border-bottom:1px dashed var(--border-default);
       -webkit-tap-highlight-color: transparent;
     }
+    a:last-child{
+      border:none;
+    }
     p{
       font-size:0.8rem;
+      color: var(--color-dark);
     }
     p span{
       color:var(--color-primary);
@@ -63,6 +67,12 @@
         <a href="examples/search.html">search 搜索</a>
         <a href="examples/noticebar.html">noticebar 通知栏</a>
         <a href="examples/indexbar.html">indexbar 索引栏</a>
+        <a href="examples/text.html">text 段落</a>
+        <a href="examples/badge.html">badge 徽章</a>
+        <a href="examples/signature.html">signature 签名</a>
+        <a href="examples/square.html">square 九宫格</a>
+        <a href="examples/video.html">video 视频</a>
+        <!-- <a href="examples/echarts.html">echarts 图表</a> -->
         <!-- <a href="examples/code.html">code</a> -->
       </hc-panel>
     </hc-view>
