--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <a href="examples/signature.html">signature 签名</a>
         <a href="examples/square.html">square 九宫格</a>
         <a href="examples/video.html">video 视频</a>
+        <a href="examples/keyboard.html">keyboard 键盘</a>
         <!-- <a href="examples/echarts.html">echarts 图表</a> -->
         <!-- <a href="examples/code.html">code</a> -->
       </hc-panel>
