完善文档及部分组件的全局指令

--- a/examples/button.html
+++ b/examples/button.html
@@ -97,7 +97,7 @@
       <hc-panel>
         <hc-title label="点击加载""></hc-title>
         <p>dom.Loading()调用加载样式，dom.Loaded()加载完成！</p>
-        <hc-button class="click" conner icon="add">提交</hc-button>
+        <hc-button class="click" conner icon="add" ripple>提交</hc-button>
         <hc-button class="click" conner type="primary">提交</hc-button>
       </hc-panel>
       <hc-panel>
