--- a/examples/switch.html
+++ b/examples/switch.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <hc-page>
-    <hc-header>开关</hc-header>
+    <hc-header>
+      <span>开关</span>
+      <hc-text onclick="javascript:window.location.href='./docs/#/../../src/components/hc-switch/readme';" slot="right">文档</hc-text>
+    </hc-header>
     <hc-view>
       <hc-panel>
         <hc-title>普通</hc-title>
