--- a/examples/list.html
+++ b/examples/list.html
@@ -13,18 +13,18 @@
       <hc-panel>
         <hc-title>简单</hc-title>
         <hc-list>
-          <hc-list-item heading="内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函"></hc-list-item>
+          <hc-list-item head="内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函"></hc-list-item>
           <hc-list-item>
-            <span slot="heading">关于2019年度护士执业资格现场确认时间的通知</span>
+            <span slot="head">关于2019年度护士执业资格现场确认时间的通知</span>
           </hc-list-item>
         </hc-list>
       </hc-panel>
       <hc-panel>
         <hc-title>带时间</hc-title>
         <hc-list>
-          <hc-list-item date="发布时间：2020-02-23 13:23:32" heading="内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部"></hc-list-item>
+          <hc-list-item date="发布时间：2020-02-23 13:23:32" head="内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部"></hc-list-item>
           <hc-list-item>
-            <span slot="heading">关于2019年度护士执业资格现场确认时间的通知</span>
+            <span slot="head">关于2019年度护士执业资格现场确认时间的通知</span>
             <span slot="date">发布时间：2020-02-23 13:23:32</span>
           </hc-list-item>
         </hc-list>
@@ -32,12 +32,12 @@
       <hc-panel>
         <hc-title>复杂列表</hc-title>
         <hc-list>
-          <hc-list-item type="complex" date="发布时间：2020-02-23 13:23:32" heading="内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部"></hc-list-item>
+          <hc-list-item type="complex" date="发布时间：2020-02-23 13:23:32" head="内部呈批: 关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部"></hc-list-item>
           <hc-list-item type="complex">
             <span slot="attach">
               <hc-tag size="mini" plain conner type="danger">未读</hc-tag>
             </span>
-            <span slot="heading">关于2019年度护士执业资格现场确认时间的通知</span>
+            <span slot="head">关于2019年度护士执业资格现场确认时间的通知</span>
             <span slot="date">发布时间：2020-02-23 13:23:32</span>
           </hc-list-item>
         </hc-list>
@@ -45,10 +45,10 @@
       <hc-panel>
         <hc-title>文件列表</hc-title>
         <hc-list>
-          <hc-list-item append-color="#f00" append-icon="ashbin" cover="../assets/word.png" date="432Kb" heading="内部呈批.doc"></hc-list-item>
+          <hc-list-item append-color="#f00" append-icon="ashbin" cover="../assets/word.png" date="432Kb" head="内部呈批.doc"></hc-list-item>
           <hc-list-item>
             <hc-image width="36" height="36" style="margin-right:0.4rem;" slot="cover" src="../assets/pdf.png"></hc-image>
-            <span slot="heading">关于2019年度护士执业资格现场确认时间的通知</span>
+            <span slot="head">关于2019年度护士执业资格现场确认时间的通知</span>
             <span slot="date">1.23Mb</span>
             <hc-icon name="ashbin" slot="append"></hc-icon>
           </hc-list-item>
@@ -57,11 +57,11 @@
       <hc-panel>
         <hc-title>自定义图片尺寸</hc-title>
         <hc-list>
-          <hc-list-item cover-width="120" cover-height="80" cover="../assets/img1.png" date="2020-02-23 13:23:32" heading="内部呈批.doc"></hc-list-item>
-          <hc-list-item reverse cover-width="120" cover-height="80" cover="../assets/img1.png" date="2020-02-23 13:23:32" heading="关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部.doc"></hc-list-item>
+          <hc-list-item cover-width="120" cover-height="80" cover="../assets/img1.png" date="2020-02-23 13:23:32" head="内部呈批.doc"></hc-list-item>
+          <hc-list-item reverse cover-width="120" cover-height="80" cover="../assets/img1.png" date="2020-02-23 13:23:32" head="关于机构改革中涉改党委工作机关和政府工作部门刻制印章的函内部.doc"></hc-list-item>
           <hc-list-item reverse>
             <hc-image width="120" height="80" style="margin-left:0.4rem;" slot="cover" src="../assets/img2.png"></hc-image>
-            <span slot="heading">关于2019年度护士执业资格现场确认时间的通知</span>
+            <span slot="head">关于2019年度护士执业资格现场确认时间的通知</span>
             <span slot="date">2020-02-23 13:23:32</span>
           </hc-list-item>
         </hc-list>
