--- a/examples/switch.html
+++ b/examples/switch.html
@@ -19,7 +19,7 @@
       </hc-panel>
       <hc-panel>
         <hc-title>自定义图标</hc-title>
-        <hc-switch type="favorites" off-icon="favorites" active-icon="favorites-fill">收藏</hc-switch>
+        <hc-switch custom type="favorites" off-icon="favorites" active-icon="favorites-fill">收藏</hc-switch>
       </hc-panel>
     </hc-view>
   </hc-page>
