--- a/examples/video.html
+++ b/examples/video.html
@@ -12,7 +12,7 @@
     <hc-view>
       <hc-panel>
         <hc-title>普通</hc-title>
-        <hc-video src="https://swimly.cn:8080/mui/demo1.mp4"></hc-video>
+        <hc-video poster="../assets/poster.png" src="https://swimly.cn:8080/mui/demo1.mp4"></hc-video>
       </hc-panel>
     </hc-view>
   </hc-page>
