--- a/examples/actionsheet.html
+++ b/examples/actionsheet.html
@@ -12,36 +12,47 @@
     <hc-view>
       <hc-panel>
         <hc-title>单选</hc-title>
-        <hc-actionsheet>
-          <hc-button slot="handle" conner type="primary">打开</hc-button>
-          <hc-actionsheet-item active>支付宝</hc-actionsheet-item>
-          <hc-actionsheet-item>微信</hc-actionsheet-item>
-          <hc-actionsheet-item>网银</hc-actionsheet-item>
-          <hc-actionsheet-item>支付宝</hc-actionsheet-item>
-          <hc-actionsheet-item>微信</hc-actionsheet-item>
-          <hc-actionsheet-item>网银</hc-actionsheet-item>
-          <hc-actionsheet-item>支付宝</hc-actionsheet-item>
-          <hc-actionsheet-item>微信</hc-actionsheet-item>
-          <hc-actionsheet-item>网银</hc-actionsheet-item>
+        <hc-actionsheet value="0">
+          <hc-actionsheet-handle>
+            <hc-button conner plain type="primary">打开</hc-button>
+          </hc-actionsheet-handle>
+          <hc-actionsheet-content>
+            <hc-actionsheet-item value="0">支付宝</hc-actionsheet-item>
+            <hc-actionsheet-item value="1">微信</hc-actionsheet-item>
+            <hc-actionsheet-item value="2">网银</hc-actionsheet-item>
+          </hc-actionsheet-content>
         </hc-actionsheet>
       </hc-panel>
       <hc-panel>
         <hc-title>多选</hc-title>
-        <hc-actionsheet mode="multiple">
-          <hc-button slot="handle" conner type="danger">打开</hc-button>
-          <hc-actionsheet-item active>支付宝</hc-actionsheet-item>
-          <hc-actionsheet-item>微信</hc-actionsheet-item>
-          <hc-actionsheet-item>网银</hc-actionsheet-item>
-          <hc-actionsheet-item>支付宝</hc-actionsheet-item>
-          <hc-actionsheet-item>微信</hc-actionsheet-item>
-          <hc-actionsheet-item>网银</hc-actionsheet-item>
-          <hc-actionsheet-item>支付宝</hc-actionsheet-item>
-          <hc-actionsheet-item>微信</hc-actionsheet-item>
-          <hc-actionsheet-item>网银</hc-actionsheet-item>
+        <hc-actionsheet value="0" multiple>
+          <hc-actionsheet-handle>
+            <hc-button conner plain type="primary">打开</hc-button>
+          </hc-actionsheet-handle>
+          <hc-actionsheet-content>
+            <hc-actionsheet-item value="0">支付宝</hc-actionsheet-item>
+            <hc-actionsheet-item value="1">微信</hc-actionsheet-item>
+            <hc-actionsheet-item value="2">网银</hc-actionsheet-item>
+          </hc-actionsheet-content>
         </hc-actionsheet>
+      </hc-panel>
+      <hc-panel>
+        <hc-title>指令</hc-title>
+        <hc-button id="zl" type="success" plain>指令</hc-button>
       </hc-panel>
     </hc-view>
   </hc-page>
+  <script type="module">
+    import {hc_actionsheet} from '../www/build/hc-actionsheet.entry.js'
+    window.Actionsheet = new hc_actionsheet({})
+  </script>
   <script type="module" src="../www/build/miui.esm.js"></script>
+  <script>
+    document.querySelector('#zl').addEventListener('click', () => {
+      Actionsheet.generate({
+        data: [{label:'男',value:'1'},{label:'女',value:'0'}]
+      })
+    })
+  </script>
 </body>
 </html>
