--- a/examples/picker.html
+++ b/examples/picker.html
@@ -12,7 +12,7 @@
     <hc-view>
       <hc-panel>
         <hc-title>普通</hc-title>
-        <hc-picker id="auto" current="1">
+        <hc-picker-view id="auto" current="1">
           <hc-picker-item value="0">2020</hc-picker-item>
           <hc-picker-item value="1">2019</hc-picker-item>
           <hc-picker-item value="1">2018</hc-picker-item>
@@ -21,68 +21,82 @@
           <hc-picker-item value="1">2015</hc-picker-item>
           <hc-picker-item value="1">2014</hc-picker-item>
           <hc-picker-item value="1">2013</hc-picker-item>
-          <hc-picker-item value="1">2012</hc-picker-item>
-          <hc-picker-item value="0">2011</hc-picker-item>
-          <hc-picker-item value="1">2010</hc-picker-item>
-          <hc-picker-item value="1">2009</hc-picker-item>
-          <hc-picker-item value="1">2008</hc-picker-item>
-          <hc-picker-item value="1">2007</hc-picker-item>
-          <hc-picker-item value="1">2006</hc-picker-item>
-          <hc-picker-item value="1">2005</hc-picker-item>
-          <hc-picker-item value="1">2004</hc-picker-item>
-          <hc-picker-item value="1">2003</hc-picker-item>
-          <hc-picker-item value="0">2020</hc-picker-item>
-          <hc-picker-item value="1">2019</hc-picker-item>
-          <hc-picker-item value="1">2018</hc-picker-item>
-          <hc-picker-item value="1">2017</hc-picker-item>
-          <hc-picker-item value="1">2016</hc-picker-item>
-          <hc-picker-item value="1">2015</hc-picker-item>
-          <hc-picker-item value="1">2014</hc-picker-item>
-          <hc-picker-item value="1">2013</hc-picker-item>
-          <hc-picker-item value="1">2012</hc-picker-item>
-          <hc-picker-item value="0">2011</hc-picker-item>
-          <hc-picker-item value="1">2010</hc-picker-item>
-          <hc-picker-item value="1">2009</hc-picker-item>
-          <hc-picker-item value="1">2008</hc-picker-item>
-          <hc-picker-item value="1">2007</hc-picker-item>
-          <hc-picker-item value="1">2006</hc-picker-item>
-          <hc-picker-item value="1">2005</hc-picker-item>
-          <hc-picker-item value="1">2004</hc-picker-item>
-          <hc-picker-item value="1">2003</hc-picker-item>
-        </hc-picker>
-      </hc-panel>
-      <hc-panel>
-        <hc-title>slot</hc-title>
-        <hc-picker-view>
-          <p slot="handle">点击选择</p>
-          <hc-picker>
-            <hc-picker-item value="0">湖北</hc-picker-item>
-            <hc-picker-item value="1">湖南</hc-picker-item>
-            <hc-picker-item value="0">广东</hc-picker-item>
-            <hc-picker-item value="1">广西</hc-picker-item>
-          </hc-picker>
         </hc-picker-view>
       </hc-panel>
       <hc-panel>
+        <hc-title>slot</hc-title>
+        <hc-picker>
+          <hc-picker-handle>
+            <hc-button>选择日期</hc-button>
+          </hc-picker-handle>
+          <hc-picker-content>
+            <hc-picker-view>
+              <hc-picker-item value="2020">2020</hc-picker-item>
+              <hc-picker-item value="2019">2019</hc-picker-item>
+              <hc-picker-item value="2018">2018</hc-picker-item>
+              <hc-picker-item value="2017">2017</hc-picker-item>
+              <hc-picker-item value="2016">2016</hc-picker-item>
+              <hc-picker-item value="2015">2015</hc-picker-item>
+              <hc-picker-item value="2014">2014</hc-picker-item>
+              <hc-picker-item value="2013">2013</hc-picker-item>
+            </hc-picker-view>
+          </hc-picker-content>
+        </hc-picker>
+        <hc-picker>
+          <hc-picker-handle>
+            <hc-button>请选择年月</hc-button>
+          </hc-picker-handle>
+          <hc-picker-content>
+            <hc-picker-view>
+              <hc-picker-item value="2020">2020</hc-picker-item>
+              <hc-picker-item value="2019">2019</hc-picker-item>
+              <hc-picker-item value="2018">2018</hc-picker-item>
+              <hc-picker-item value="2017">2017</hc-picker-item>
+              <hc-picker-item value="2016">2016</hc-picker-item>
+              <hc-picker-item value="2015">2015</hc-picker-item>
+              <hc-picker-item value="2014">2014</hc-picker-item>
+              <hc-picker-item value="2013">2013</hc-picker-item>
+            </hc-picker-view>
+            <hc-picker-view>
+              <hc-picker-item value="1">1</hc-picker-item>
+              <hc-picker-item value="2">2</hc-picker-item>
+              <hc-picker-item value="3">3</hc-picker-item>
+              <hc-picker-item value="4">4</hc-picker-item>
+              <hc-picker-item value="5">5</hc-picker-item>
+              <hc-picker-item value="6">6</hc-picker-item>
+              <hc-picker-item value="7">7</hc-picker-item>
+              <hc-picker-item value="8">8</hc-picker-item>
+              <hc-picker-item value="9">9</hc-picker-item>
+              <hc-picker-item value="10">10</hc-picker-item>
+              <hc-picker-item value="11">11</hc-picker-item>
+              <hc-picker-item value="12">12</hc-picker-item>
+            </hc-picker-view>
+          </hc-picker-content>
+        </hc-picker>
+      </hc-panel>
+      <hc-panel>
         <hc-title>指令调用</hc-title>
-        <div id="zl"></div>
+        <hc-button id="zl" type="primary">指令调用</hc-button>
       </hc-panel>
     </hc-view>
   </hc-page>
   <script type="module" src="../www/build/miui.esm.js"></script>
   <script type="module">
     import china from '../src/utils/china.js'
-    import {hc_picker_view} from '../www/build/hc-picker-view.entry.js'
-    // const picker = new hc_picker_view({})
-    // const p1 = picker.generate({
-    //   data: china,
-    //   value: '湖北省,武汉市,江夏区',
-    //   parent: document.querySelector('#zl')
-    // })
+    import {hc_picker} from '../www/build/hc-picker.entry.js'
+    window.Picker = new hc_picker({})
+    window.china = china
   </script>
   <script src="//cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
   <script>
+    document.querySelector('#zl').addEventListener('click', () => {
+      Picker.generate({
+        data: china,
+        value: '湖北省,武汉市,江夏区',
+        'label-prop': 'name'
+      })
+    })
   </script>
 </body>
 </html>
