add date && address :fire:

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         <a href="examples/keyboard.html">keyboard 键盘</a>
         <a href="examples/selection.html">selection 多层选择</a>
         <a href="examples/calendar.html">calendar 日历</a>
+        <a href="examples/date.html">date 日期时间</a>
+        <a href="examples/address.html">address 地区选择</a>
         <!-- <a href="examples/echarts.html">echarts 图表</a> -->
         <!-- <a href="examples/code.html">code</a> -->
       </hc-panel>
