--- a/examples/keyboard.html
+++ b/examples/keyboard.html
@@ -13,7 +13,13 @@
       <hc-panel>
         <hc-title>数字键盘</hc-title>
         <hc-keyboard type="number">
-          <hc-button type="primary">数字键盘</hc-button>
+          <hc-input readonly placeholder="数字键盘"></hc-input>
+        </hc-keyboard>
+      </hc-panel>
+      <hc-panel>
+        <hc-title>身份证键盘</hc-title>
+        <hc-keyboard type="cardnumber">
+          <hc-button type="primary">身份证</hc-button>
         </hc-keyboard>
       </hc-panel>
       <hc-panel>
