--- a/examples/picker.html
+++ b/examples/picker.html
@@ -95,7 +95,7 @@
         data: china,
         value: '湖北省,武汉市,江夏区'
       }).then(res => {
-        res.addEventListener('vchange', (e) => {
+        res.addEventListener('vdone', (e) => {
           console.log(e.detail.value)
         })
       })
