--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <a href="examples/calendar.html">calendar 日历</a>
         <a href="examples/date.html">date 日期时间</a>
         <a href="examples/address.html">address 地区选择</a>
+        <a href="examples/pullrefresh.html">pullrefresh 下拉刷新</a>
         <!-- <a href="examples/echarts.html">echarts 图表</a> -->
         <!-- <a href="examples/code.html">code</a> -->
       </hc-panel>
