--- a/examples/image.html
+++ b/examples/image.html
@@ -22,22 +22,24 @@
       </hc-panel>
       <hc-panel>
         <hc-title>圆形图片</hc-title>
-        <hc-image radius="10" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
+        <hc-image radius="10" src="http://e.hiphotos.baidu.com/zhidao/pic/item/b64543a98226cffc7a951157b8014a90f703ea9c.jpg"></hc-image>
         <hc-image width="48" height="48" radius="24" src="../assets/ty1.png"></hc-image>
       </hc-panel>
       <hc-panel>
         <hc-title>带水印</hc-title>
-        <hc-image watermark="https://swimly.cn" radius="10" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
+        <hc-image watermark="https://swimly.cn" radius="10" src="http://img1.imgtn.bdimg.com/it/u=2937873876,302237995&fm=26&gp=0.jpg"></hc-image>
       </hc-panel>
       <hc-panel>
         <hc-title>不同填充模式</hc-title>
-        <hc-row>
-          <hc-image fit="contain" width="80" height="80" radius="40" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
-          <hc-image fit="cover" width="80" height="80" radius="40" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
-          <hc-image fit="fill" width="80" height="80" radius="40" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
-          <hc-image fit="none" width="80" height="80" radius="40" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
-          <hc-image fit="scale-down" width="80" height="80" radius="40" src="http://attach.bbs.miui.com/forum/201105/17/113554rnu40q7nbgnn3lgq.jpg"></hc-image>
-        </hc-row>
+        <hc-image fit="contain" width="300" height="300" radius="40" src="http://attach.bbs.miui.com/forum/201407/12/191515sskuppax42aarano.jpg"></hc-image>
+        <p></p>
+        <hc-image fit="cover" width="300" height="300" radius="40" src="http://10wallpaper.com/wallpaper/1920x1080/1310/red_autumn_leaves-Scenery_HD_wallpapers_1920x1080.jpg"></hc-image>
+        <p></p>
+        <hc-image fit="fill" width="300" height="300" radius="40" src="http://img3.imgtn.bdimg.com/it/u=3622639324,53139701&fm=26&gp=0.jpg"></hc-image>
+        <p></p>
+        <hc-image fit="none" width="300" height="300" radius="40" src="http://attach.bbs.miui.com/forum/201204/17/1539083wxpexg5b0fbvzpv.jpg"></hc-image>
+        <p></p>
+        <hc-image lazy fit="scale-down" width="300" height="300" radius="40" src="http://img1.imgtn.bdimg.com/it/u=1320591001,1002679397&fm=214&gp=0.jpg"></hc-image>
       </hc-panel>
     </hc-view>
   </hc-page>
