--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <a href="examples/date.html">date 日期时间</a>
         <a href="examples/address.html">address 地区选择</a>
         <a href="examples/pullrefresh.html">pullrefresh 下拉刷新</a>
+        <a href="examples/touch.html">touch 放大</a>
+        <a href="examples/imagepreview.html">imagepreview 图片预览</a>
         <!-- <a href="examples/echarts.html">echarts 图表</a> -->
         <!-- <a href="examples/code.html">code</a> -->
       </hc-panel>
