--- a/examples/imagepreview.html
+++ b/examples/imagepreview.html
@@ -24,5 +24,7 @@
     </hc-view>
   </hc-page>
   <script type="module" src="../www/build/miui.esm.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
